--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -113,7 +113,7 @@
                       IsChecked="{Binding EnableAutoFetch, Mode=TwoWay}"/>
 
             <NumericUpDown Minimum="1" Maximum="60" Increment="1"
-                           Height="26"
+                           Height="26" Width="110"
                            Margin="8,0,0,0" Padding="4"
                            BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}"
                            CornerRadius="3"
