--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -211,6 +211,20 @@
                 <Setter Property="MaxWidth" Value="800"/>
               </Style>
             </v:CommitMessagePresenter.Styles>
+            
+            <v:CommitMessagePresenter.DataTemplates>
+              <DataTemplate DataType="m:Commit">
+                <StackPanel MinWidth="400" Orientation="Vertical">
+                  <Grid ColumnDefinitions="Auto,*,Auto">
+                    <v:Avatar Grid.Column="0" Width="16" Height="16" VerticalAlignment="Center" IsHitTestVisible="False" User="{Binding Author}"/>
+                    <TextBlock Grid.Column="1" Classes="primary" Text="{Binding Author.Name}" Margin="8,0,0,0"/>
+                    <TextBlock Grid.Column="2" Classes="primary" Text="{Binding CommitterTimeStr}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
+                  </Grid>
+
+                  <TextBlock Classes="primary" Margin="0,8,0,0" Text="{Binding Subject}" TextWrapping="Wrap"/>
+                </StackPanel>
+              </DataTemplate>
+            </v:CommitMessagePresenter.DataTemplates>
           </v:CommitMessagePresenter>
         </Grid>
       </StackPanel>
